Clean up continues: fix paths, update prefix to sp

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Inter";
-  src: url("../../../assets/Inter-VariableFont.ttf") format("truetype");
+  src: url("../assets/Inter-VariableFont.ttf") format("truetype");
 }
 
 body,
