Make dialog visible without content-script for faster development

--- a/src/app/page-loader/page-loader.component.html
+++ b/src/app/page-loader/page-loader.component.html
@@ -1,6 +1,6 @@
 <p-dialog
   position="top-right"
-  [draggable]="true"
+  [draggable]="false"
   [visible]="isVisible"
   [maximizable]="true"
   [styleClass]="drawerClass"
