Replace p-dialog with sp-preview

--- a/src/app/page-loader/page-loader.component.html
+++ b/src/app/page-loader/page-loader.component.html
@@ -1,4 +1,4 @@
-<p-dialog
+<sp-preview
   position="top-right"
   [draggable]="false"
   [visible]="isVisible"
@@ -35,4 +35,4 @@
     </p>
     <p>Taking you to a new tab.</p>
   </p-card>
-</p-dialog>
+</sp-preview>
