--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<router-outlet> </router-outlet>
+<!-- <router-outlet> </router-outlet> -->
+<sp-page-loader url="https://google.com/search?igu=1&q=hello world"></sp-page-loader>
