--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -18,8 +18,8 @@
         [attr.aria-labelledby]="id + '-label'">
         <div *ngIf="resizable" class="p-resizable-handle" style="z-index: 90;" (mousedown)="initResize($event)"></div>
         <div #titlebar class="p-dialog-header" (mousedown)="initDrag($event)" *ngIf="showHeader">
-            <span [attr.id]="id + '-label'" class="p-dialog-title"
-                *ngIf="!headerFacet && !headerTemplate">{{header}}</span>
+            <span [attr.id]="id + '-label'" class="p-dialog-title" *ngIf="!headerFacet && !headerTemplate">hello
+                header{{header}}</span>
             <span [attr.id]="id + '-label'" class="p-dialog-title" *ngIf="headerFacet">
                 <ng-content select="p-header"></ng-content>
             </span>
