Put iframer in ShadowDom, cleanup

--- a/src/app/iframer/iframer.component.html
+++ b/src/app/iframer/iframer.component.html
@@ -1,5 +1,5 @@
 <sp-preview
-  position="top"
+  position="top-right"
   [headerText]="headerText"
   [headerIconUrl]="headerIconUrl"
   [draggable]="true"
