--- a/src/chrome/floatie/floatie.scss
+++ b/src/chrome/floatie/floatie.scss
@@ -1,4 +1,3 @@
-
 /* Floatie CSS */
 #sp-floatie-container {
     display: none;
@@ -15,8 +14,8 @@
 
 #sp-floatie-arrow {
     position: absolute;
-    background: rgb(255,34,34);
-    background: linear-gradient(-45deg, rgba(34,34,34,1) 0%, rgba(34,34,34,1) 51%, rgba(0,0,0,0) 53%, rgba(0,0,0,0) 80%);  
+    background: rgb(255, 34, 34);
+    background: linear-gradient(-45deg, rgba(34, 34, 34, 1) 0%, rgba(34, 34, 34, 1) 51%, rgba(0, 0, 0, 0) 53%, rgba(0, 0, 0, 0) 80%);
     width: 8px;
     height: 8px;
     transform: rotate(45deg);
