Clean up + logging fixes

--- a/src/app/iframer/iframer.component.html
+++ b/src/app/iframer/iframer.component.html
@@ -17,7 +17,7 @@
   (mouseenter)="onMouseOver($event)"
   (mouseleave)="onMouseOut($event)"
   (visibleChange)="onVisibleChange($event)"
-  (onOpenInNewTab)="onOpenInNewTab($event)"
+  (onOpenInNewTab)="onOpenInNewTab()"
 >
   <iframe
     *ngIf="url && !unsupportedHost"
