Add loading bar

--- a/src/app/iframer/iframer.component.html
+++ b/src/app/iframer/iframer.component.html
@@ -3,6 +3,7 @@
   [headerText]="headerText"
   [headerIconUrl]="headerIconUrl"
   [draggable]="true"
+  [loading]="loading"
   [visible]="isVisible"
   [styleClass]="drawerClass"
   [contentStyleClass]="focusClass"
