--- a/src/app/preview/preview.component.scss
+++ b/src/app/preview/preview.component.scss
@@ -188,3 +188,42 @@ from inside it so including directly. */
     display: flex;
     align-items: center;
 }
+
+.p-header-loading-bar {
+    width: 100%;
+    height: 3px;
+    background: #EBECF0;
+    position: relative;
+    overflow: hidden;
+}
+
+.bar-animation {
+    width: 50%;
+    height: 3px;
+    background: #0055D5;
+    position: absolute;
+    transition: 1s all ease-out;
+    animation-name: loading-interminate;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes loading-interminate {
+    0% {
+        left: 0;
+        width: 0;
+    }
+
+    50% {
+        left: 10%;
+    }
+
+    70% {
+        left: 60%;
+    }
+
+    100% {
+        left: 100%;
+        right: 0;
+    }
+}
