--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -21,6 +21,10 @@
             (mousedown)="initResize($event, 'se')"></div>
         <div #titlebar class="p-dialog-header" (mousedown)="initDrag($event)" *ngIf="showHeader">
             <span [attr.id]="id + '-label'" class="p-dialog-title">
+                <button *ngIf="showBackButton" type="button" [ngClass]="{'p-dialog-header-icon':true}" (click)="backButtonClick()"
+                    tabindex="-1" pRipple>
+                    <span class="p-dialog-header-back-nav" [ngClass]="backButtonIcon"></span>
+                </button>
                 <img class="p-dialog-title-icon" [src]="headerIconUrl" />
                 <span class="p-dialog-title-text">{{headerText}}</span>
             </span>
