--- a/src/app/preview/preview.component.scss
+++ b/src/app/preview/preview.component.scss
@@ -26,7 +26,8 @@ from inside it so including directly. */
 
     overflow: hidden;
     border-radius: 8px;
-    box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    border: 1px solid #ddd;
     user-select: none;
     -moz-user-select: none;
     -khtml-user-select: none;
