--- a/src/app/preview/preview.component.scss
+++ b/src/app/preview/preview.component.scss
@@ -1,6 +1,6 @@
 /* This component is rendered in a ShadowDom and these styles are not accessible
 from inside it so including directly. */
-@import "../../../node_modules/primeng/resources/themes/saga-blue/theme.css";
+@import "./saga-blue-theme.css";
 @import "../../../node_modules/primeng/resources/primeng.min.css";
 @import "../../../node_modules/primeicons/primeicons.css";
 
