Add page title to previewr header with fallback to site_name and origin

--- a/src/app/preview/preview.component.scss
+++ b/src/app/preview/preview.component.scss
@@ -63,6 +63,7 @@ from inside it so including directly. */
     .p-dialog-title {
       display: inline-flex;
       align-items: center;
+      overflow: hidden;
 
       button {
         margin-right: 0;
@@ -78,6 +79,10 @@ from inside it so including directly. */
     .p-dialog-title-text {
       font-weight: normal;
       font-size: 14px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+      padding-right: 35px;
     }
   }
 
