--- a/src/options-page/options.css
+++ b/src/options-page/options.css
@@ -12,6 +12,13 @@ input[type="checkbox"] {
   margin-top: 15px;
 }
 
+.form-switch i {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
+  width: 20px;
+  height: 20px;
+  display: block;
+}
+
 .nice-select {
   -webkit-tap-highlight-color: transparent;
   background-color: #fff;
